corrected body overflow

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,6 +8,9 @@
     padding: 0;
     margin: 0;
 }
+html, body{
+    overflow-x: hidden;
+}
 
 body{
     overflow-x: hidden;
